--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,5 +38,7 @@
 @import 'modules/rooms-benefits';
 @import 'modules/rooms-slider';
 @import 'modules/form-bottom';
+@import 'modules/service-list';
+@import 'modules/service-benefits';
 
 @import 'pages/home';
