--- a/sass/modules/_additions.scss
+++ b/sass/modules/_additions.scss
@@ -61,6 +61,9 @@
 		.addition__descr {
 			opacity: 1;
 		}
+		.addition__more {
+			opacity: 1;
+		}
 	}
 	&.animated {
 		opacity: 1;
@@ -128,5 +131,25 @@
 	}
 	@include res(l) {
 		display: none;
+	}
+}
+
+.addition__more {
+	position: absolute;
+	bottom: 18px;
+	left: 0;
+	right: 0;
+	display: block;
+	font-size: 14px;
+	line-height: 1;
+	text-align: center;
+	color: $light-blue;
+	opacity: 0;
+	transition: all 0.3s ease;
+	@include res(l) {
+		position: relative;
+		bottom: initial;
+		font-size: 12px;
+		opacity: 1;
 	}
 }
