--- a/sass/main.scss
+++ b/sass/main.scss
@@ -40,5 +40,6 @@
 @import 'modules/form-bottom';
 @import 'modules/service-list';
 @import 'modules/service-benefits';
+@import 'modules/service-steps';
 
 @import 'pages/home';
