--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,8 @@
 @import 'modules/modals';
 @import 'modules/slider-ui';
 @import 'modules/video-play';
+@import 'modules/pagination';
+@import 'modules/breadcrumbs';
 @import 'modules/waves';
 @import 'modules/page-title';
 @import 'modules/top-panel';
@@ -27,6 +29,7 @@
 @import 'modules/big-slider';
 @import 'modules/work-places';
 @import 'modules/animators';
+@import 'modules/animators-list';
 @import 'modules/our-offers';
 @import 'modules/big-video';
 @import 'modules/additions';
