--- a/sass/modules/_additions.scss
+++ b/sass/modules/_additions.scss
@@ -12,7 +12,7 @@
 	}
 }
 
-.additions__list {
+.additions__list, .additions-list {
 	display: flex;
 	align-items: flex-start;
 	justify-content: flex-start;
