--- a/sass/modules/_rooms-slider.scss
+++ b/sass/modules/_rooms-slider.scss
@@ -16,6 +16,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-wrap: wrap;
 	@include res(l) {
 		padding-top: 10px;
 	}
