--- a/sass/modules/_additions.scss
+++ b/sass/modules/_additions.scss
@@ -55,7 +55,7 @@
 		.addition__img {
 			&:before,&:after {
 				opacity: 1;
-				transform: scale(1.1) rotate(0) translate3d(0,0,0);
+				transform: scale(1.07) rotate(0) translate3d(0,0,0);
 			}
 		}
 		.addition__descr {
@@ -113,6 +113,7 @@
 	img {
 		display: block;
 		max-width: 100%;
+		margin: 0 auto;
 		border-radius: 20px;
 	}
 }
