--- a/sass/modules/_work-places.scss
+++ b/sass/modules/_work-places.scss
@@ -1,5 +1,5 @@
 .work-places-sec {
-	background: url('../img/work-places/bg-work-places.jpg') no-repeat center top, #f6f7fb;
+	background: url('../img/work-places/bg-work-places.jpg') no-repeat center top 20px, #f6f7fb;
 	background-size: 100% auto;
 }
 
