--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,5 +44,6 @@
 @import 'modules/service-list';
 @import 'modules/service-benefits';
 @import 'modules/service-steps';
+@import 'modules/foto-report';
 
 @import 'pages/home';
