--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -24,11 +24,10 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:  url('../fonts/icomoon.eot?3vwpvm');
-	src:  url('../fonts/icomoon.eot?3vwpvm#iefix') format('embedded-opentype'),
-	url('../fonts/icomoon.ttf?3vwpvm') format('truetype'),
-	url('../fonts/icomoon.woff?3vwpvm') format('woff'),
-	url('../fonts/icomoon.svg?3vwpvm#icomoon') format('svg');
+	src:
+		url('../fonts/icomoon.ttf?z1wf2g') format('truetype'),
+		url('../fonts/icomoon.woff?z1wf2g') format('woff'),
+		url('../fonts/icomoon.svg?z1wf2g#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -48,27 +47,33 @@ i {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.i-play:before {
-	content: "\e907";
-}
-.i-rocket:before {
-	content: "\e906";
-}
-.i-left:before {
-	content: "\e904";
-}
-.i-right:before {
-	content: "\e905";
-}
-.i-soc-fb:before {
+.i-done-checkbox:before {
 	content: "\e900";
 }
-.i-soc-insta:before {
+.i-left:before {
 	content: "\e901";
 }
-.i-soc-vk:before {
+.i-play:before {
 	content: "\e902";
 }
-.i-soc-you:before {
+.i-right:before {
 	content: "\e903";
+}
+.i-rocket:before {
+	content: "\e904";
+}
+.i-soc-fb:before {
+	content: "\e905";
+}
+.i-soc-insta:before {
+	content: "\e906";
+}
+.i-soc-vk:before {
+	content: "\e907";
+}
+.i-soc-you:before {
+	content: "\e908";
+}
+.i-zoom-in:before {
+	content: "\e909";
 }
